--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -12,30 +12,5 @@
 <!-- {{ rooms?.availabeRooms ?? "No rooms Available" }} -->
 
 <div *ngIf="rooms.availabeRooms > 0">
-  Rooms List
-  <form>
-    <tr>
-      <th>Index</th>
-      <th>Even/Odd</th>
-      <th>Room Number</th>
-      <th>Room Type</th>
-      <th>Amenities</th>
-      <th>Price</th>
-      <th>Checkin Time</th>
-    </tr>
-    <tr
-      [ngClass]="e ? 'even' : 'odd'"
-      *ngFor="let room of roomList; let e = even; let o = odd; let i = index"
-    >
-      <td>{{ i }}</td>
-      <td>{{ e ? "Even" : "Odd" }}</td>
-      <td>{{ room.roomNumber }}</td>
-      <td>{{ room.roomType }}</td>
-      <td>{{ room.ammenities }}</td>
-      <td>{{ room.price }}</td>
-      <td>{{ room.checkinTime }}</td>
-    </tr>
-  </form>
+<hinv-rooms-list [rooms]="roomList"></hinv-rooms-list>
 </div>
-
-
