--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import "bootstrap/dist/css/bootstrap.min.css";
+
+.even {
+  color: white;
+  background-color: steelblue;
+}
+
+.odd {
+  color: white;
+  background-color: tomato;
+}
