--- a/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/src/app/rooms/rooms-list/rooms-list.component.html
@@ -1,4 +1,4 @@
-Rooms List
+<h2>{{title}}</h2>
 <table class="table">
   <tr>
     <th>Index</th>
@@ -9,6 +9,7 @@ Rooms List
     <th>Price</th>
     <th>Checkin Time</th>
     <th>Rating</th>
+    <th>Select Button</th>
   </tr>
   <tr
     [ngClass]="e ? 'even' : 'odd'"
@@ -21,6 +22,9 @@ Rooms List
     <td>{{ room.ammenities }}</td>
     <td>{{ room.price | currency : "INR" }}</td>
     <td>{{ room.checkinTime | date : "dd/MMM/YYYY" }}</td>
-    <td>{{ room.rating | number: '1.0-0' }}</td>
+    <td>{{ room.rating | number : "1.0-0" }}</td>
+    <td>
+      <button class="btn btn-primary" (click)="selectRoom(room)">Select</button>
+    </td>
   </tr>
 </table>
